fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -37,13 +37,14 @@ main {
     max-width: 1280px;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #card {
     width: 65rem;
     height: 45rem;
-    margin: auto;
-    margin-top: 10rem;
     display: flex;
     border-radius: 1rem;
     -webkit-box-shadow: 0px 0px 26px 11px rgba(212,212,212,1);
